[package]
name = "web2wave-connector"
version = "0.1.1"
edition = "2021"
authors = ["mxmgorin <mxmgorin@gmail.com>"]

[dependencies]
flurl = { git = "https://github.com/MyJetTools/fl-url.git", rev = "d835b8c287302952550b604aeb1f122ac6e3a63b" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
